--- a/shoecompany/styles.css
+++ b/shoecompany/styles.css
@@ -1,25 +1,54 @@
 *{
     box-sizing: border-box;
+
+    /*fonts*/
+    font-family: "Gabarito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
+
 body{
     margin: 0;
 }
 
+a{
+    font-weight: 500;
+    text-decoration: none;
+}
+a,a:hover,a:active{
+    color:white;
+}
+
 /*element classes*/
-.header{
+#header{
     width: 100%;
-    background-color: gray;
+    background-color: rgba(112, 112, 112, 0.8);
+    backdrop-filter: saturate(80%) blur(4px);
+    position: sticky;
+    top: 0;
 }
-.nav{
+#nav{
     float: right;
-    margin: 0;
     padding: 0;
+    padding-right: 32px; /*32 / 20*/
+    margin: 0;
+    font-size: 14px;
 }
-.nav li{
+#nav li{
     float: left;
     list-style: none;
-    padding: 1em;
-    padding-right: 2em;
+    position: relative;
+}
+#nav li a{
+    /*put button padding here so we can click on li*/
+    float: left;
+    padding: 8px;
+    padding-bottom: 14px;
+    padding-top: 14px;
+
+    height: 44px;
+    overflow: hidden;
 }
 
 /*util classes*/
@@ -27,10 +56,69 @@ body{
     clear: both;
 }
 
+#nav li::after {
+    content: '';
+
+    position: absolute; /*dont ruin page flow*/
+    bottom: 0;
+    left: 25%;
+    width: 50%;
+    height: 3px;
+    border-radius: 2px;
+    background-color: white;
+
+    opacity: 0;
+    transition: opacity 0.25s ease-out;
+}
+#nav li:hover::after {
+    opacity: 1;
+}
+
 /*element ids*/
 #logo{
+    padding-left: 32px;
+}
+#logo a img{
+    padding: 4px;
+    width: 44px;
     float: left;
-    padding: 0.25em;
-    padding-left: 2em;
-    width: 5em;
+}
+
+#hamburger{
+    padding-right: 32px;
+    display: none;
+}
+#hamburger img{
+    padding: 4px;
+    width: 44px;
+    float: right;
+}
+
+/*responsive*/
+@media screen and (max-width: 400px) {
+    /*body{
+        background-color: red;
+    }*/
+    #hamburger{
+        display: block;
+    }
+    #nav{
+        display: none;
+        float: left;
+        padding-right: 0;
+        width: 100%;
+    }
+    #nav li, #nav li a{
+        width: 100%;
+    }
+    #nav li::after {
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+    #nav li:hover::after {
+        opacity: 0.2;
+    }
+
 }
