--- a/shoecompany/styles.css
+++ b/shoecompany/styles.css
@@ -34,6 +34,7 @@ a,a:hover,a:active{
     padding-right: 32px; /*32 / 20*/
     margin: 0;
     font-size: 14px;
+    display: none;
 }
 #nav li{
     float: left;
@@ -103,7 +104,6 @@ a,a:hover,a:active{
         display: block;
     }
     #nav{
-        display: none;
         float: left;
         padding-right: 0;
         width: 100%;
@@ -121,4 +121,14 @@ a,a:hover,a:active{
         opacity: 0.2;
     }
 
+}
+@media screen and (max-width: 180px) {
+    #logo{
+        display: none;
+    }
+}
+@media screen and (min-width: 400px) {
+    #nav{
+        display: block;
+    }
 }
