--- a/shoecompany/styles.css
+++ b/shoecompany/styles.css
@@ -34,7 +34,7 @@ a,a:hover,a:active{
     padding-right: 32px; /*32 / 20*/
     margin: 0;
     font-size: 14px;
-    display: none;
+    display: block;
 }
 #nav li{
     float: left;
@@ -96,6 +96,12 @@ a,a:hover,a:active{
 }
 
 /*responsive*/
+@media screen and (max-width: 180px) {
+    #logo{
+        display: none;
+    }
+}
+
 @media screen and (max-width: 400px) {
     /*body{
         background-color: red;
@@ -107,6 +113,7 @@ a,a:hover,a:active{
         float: left;
         padding-right: 0;
         width: 100%;
+        display: none;
     }
     #nav li, #nav li a{
         width: 100%;
@@ -122,13 +129,10 @@ a,a:hover,a:active{
     }
 
 }
-@media screen and (max-width: 180px) {
-    #logo{
-        display: none;
-    }
-}
-@media screen and (min-width: 400px) {
+/*
+@media screen and (min-width: 401px) {
     #nav{
         display: block;
     }
 }
+*/
