--- a/platformer/styles.css
+++ b/platformer/styles.css
@@ -9,11 +9,22 @@ hr{
     border: none;
     border-bottom: 1px black solid;
 }
-p,input,button,select,hr{
+p,input,button,select,fieldset,hr{
     margin: 10px;
     margin-top: 0;
 }
-
+ul{
+    margin:5px;
+    padding-left: 8px;
+    list-style-type:none;
+}
+fieldset{
+    padding: 5px;
+}
+input[type="range"] {
+    width:90px;
+    float: right;
+}
 .content{
     width: 514px;
     float: left;
